[tool.poetry]
name = "zenq"
version = "0.1.0"
description = "Query ZenHub for Point Values"
authors = ["Matthew de Verteuil <onceuponajooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
click = "^7.0"
pygithub = "^1.43"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
